--- a/index.html
+++ b/index.html
@@ -5,8 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Randle</title>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #222;
+            color: white;
+
+            font-size: 64pt;
+            font-size: 5vw;
+
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        a, a:visited, a:active {
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h1>Randle :)</h1>
+    <div id="link"></div>
+    <script>
+
+        function setSite(site){
+            var container = document.getElementById("link");
+
+            var link = document.createElement("a");
+            link.href = site.url;
+            link.innerText = site.name.toUpperCase();
+
+            container.innerHTML = "";
+            container.appendChild(link);
+        }
+
+        let sites = [
+            {name: "wordle", url: "https://www.nytimes.com/games/wordle/index.html"},
+            {name: "worldle", url: "https://worldle.teuteuf.fr/"},
+            {name: "heardle", url: "https://www.heardle.app/"},
+            {name: "flaggle", url: "https://flaggle.app/"},
+            {name: "nerdle", url: "https://nerdlegame.com/"},
+            {name: "quordle", url: "https://www.quordle.com/"},
+            {name: "dordle", url: "https://zaratustra.itch.io/dordle"},
+            {name: "octordle", url: "https://octordle.com/?mode=daily"},
+            {name: "crosswordle", url: "https://crosswordle.vercel.app/?daily=1"},
+            {name: "framed", url: "https://framed.wtf/"},
+        ]
+
+        let randomIndex = Math.floor(Math.random() * sites.length)
+        let site = sites[randomIndex];
+
+        let interval = setInterval(function () {
+            let randomIndex = Math.floor(Math.random() * sites.length)
+            let site = sites[randomIndex];
+            setSite(site);
+        }, 100)
+
+        setTimeout(function () {
+            clearInterval(interval);
+            setSite(site);
+
+            setTimeout(function() {
+                window.location.href = site.url;
+            }, 2000);
+        }, 3000)
+
+
+    </script>
 </body>
 </html>
